fixed z-indexing problem with header being behind intro content

--- a/_sass/_modules/_header.scss
+++ b/_sass/_modules/_header.scss
@@ -1,4 +1,6 @@
 header {
+  position: fixed;
+  z-index: 999;
   color: #FFF;
   mix-blend-mode: difference;
 }
